<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/TextForDetails"
                android:text="@string/TaskDetailstext"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
             <EditText
            android:id="@+id/taskTitle"
            android:layout_below="@+id/TextForDetails"
            android:hint="@string/taskTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/taskDuration"
                android:layout_below="@+id/taskTitle"
                android:hint="@string/taskDurationText"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/taskProirity"
                android:layout_below="@+id/taskDuration"
                android:hint="Task priority"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


                <RadioGroup
                    android:layout_below="@+id/taskProirity"
                    android:id="@+id/radioGroup"
                    android:orientation="horizontal"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/easyButton"
                        android:padding="5dp"
                        android:text="@string/easyText"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/mediumButton"
                        android:padding="5dp"
                        android:text="@string/mediumText"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/hardButton"
                        android:padding="5dp"
                        android:text="@string/hardTExt"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>

            <Button
                android:id="@+id/popupSaveButton"
                android:layout_marginTop="10dp"
                android:text="@string/saveText"
                android:textColor="@android:color/white"
                android:textStyle="bold"

                android:textSize="24sp"
                android:layout_below="@+id/radioGroup"
                android:background="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>